[package]
name = "dns_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
trust-dns-resolver = "0.23.2"
clap = { version = "4.5.6", features = ["derive"] }
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }